--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,9 @@ plugins:
 whitelist:
   - jekyll-redirect-from
 
+include:
+  - .well-known
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
